# CrSDK-usage-as-lib-exmaple

./: .gitignore  API Documentation.md  CMakeLists.txt  Dockerfile  README.md
include/SonySDK/: CMakeLists.txt
include/SonySDK/app/: CameraDevice.cpp  CameraDevice.h  PropertyValueTable.h
src/: main.cpp
src/CameraSerialNumberManager/: CameraSerialNumberManager.cpp  CameraSerialNumberManager.h
src/ConfigReader/: ConfigReader.cpp  ConfigReader.h
src/Converters/iso_converter/: iso_converter.cpp  iso_converter.h
src/Converters/shutter_speed_converter/: shutter_speed_converter.cpp  shutter_speed_converter.h
src/CrSDK_interface/: CrSDK_interface.cpp  CrSDK_interface.h
src/UsbController/: usbController.cpp  usbController.h
src/gpioPin/: gpioPin.cpp  gpioPin.h
src/https_server/: https_server.cpp  https_server.h
